# 2026-01_sistemas_embarcados

./: gpio_module.py  main.py
entrega1/: README.md
entrega2/parte1/: config.py  main.py  uart_protocol.py
entrega2/parte2/: config.py  crc16.py  main.py  modbus_protocol.py
entrega3/: README.md  main.py  main_central.py  main_distributed.py  requirements.txt
entrega3/central/: __init__.py  server.py
entrega3/common/: __init__.py  gpio_hal.py  lpr_camera.py  messages.py  modbus_rtu.py  persistence.py  traffic_math.py
entrega3/config/: central.json  distributed_1.json  distributed_2.json
entrega3/distributed/: __init__.py  server.py
trabalho2/termostato-nest/: README.md
trabalho3/: .gitignore  README.md
trabalho3/firmware/blink/main/: blink.c
trabalho3/firmware/bme280/: CMakeLists.txt
trabalho3/firmware/bme280/main/: CMakeLists.txt  bme280.c
trabalho3/firmware/buzzer/: CMakeLists.txt
trabalho3/firmware/conectividade/: CMakeLists.txt
trabalho3/firmware/dht11/: CMakeLists.txt
trabalho3/firmware/encoder/: CMakeLists.txt
trabalho3/firmware/led_rgb/: CMakeLists.txt
trabalho3/firmware/oled/: CMakeLists.txt
trabalho3/firmware/painel/: CMakeLists.txt
trabalho3/firmware/pir/: CMakeLists.txt
trabalho3/firmware/termostato/: CMakeLists.txt
trabalho3/firmware/termostato/main/: CMakeLists.txt  bmp280.c  bmp280.h  buzzer.c  buzzer.h  conectividade.c  conectividade.h  config.h  dht11.c  encoder.c  encoder.h  led_rgb.c  led_rgb.h  persistencia.c  persistencia.h  pir.c  pir.h  secrets.h.example  ssd1306.c  ssd1306.h  termostato.c
(+22 files in other folders)
